# actix-web-diesel

./: Cargo.toml  docker-compose.yml
migrations/2023-06-30-065957_create_users/: up.sql
migrations/2023-06-30-070005_create_follows/: up.sql
migrations/2023-06-30-070016_create_articles/: up.sql
migrations/2023-06-30-070020_create_tags/: up.sql
migrations/2023-06-30-070027_create_comments/: up.sql
migrations/2023-06-30-070036_create_favorites/: up.sql
src/: constants.rs  error.rs  main.rs  routes.rs
src/app/: mod.rs
src/app/article/: handlers.rs  mod.rs  model.rs  request.rs  response.rs  service.rs
src/app/comment/: handlers.rs  model.rs  response.rs  service.rs
src/app/favorite/: model.rs  service.rs
src/app/follow/: handlers.rs  model.rs
src/app/healthcheck/: handler.rs
src/app/profile/: handlers.rs  mod.rs  model.rs  response.rs
src/app/tag/: model.rs
src/app/user/: handlers.rs  mod.rs  model.rs  request.rs  response.rs
src/middleware/: auth.rs  cors.rs  mod.rs  state.rs
src/utils/: db.rs  handler.rs  mod.rs  token.rs
